<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="7dp">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/black400"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="6dp"
            android:src="@drawable/bus2" />

        <LinearLayout
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bus_code_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letreiro_line"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/destiny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destiny_string"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origem_term"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/qtd_veic"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <Button
            android:layout_marginEnd="10dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/ver_no_mapa" />


    </LinearLayout>

</LinearLayout>
