<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Map Fragment -->
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MapFragment" />

    <!-- Dim Background -->
    <View
        android:id="@+id/dim_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha="0.5"
        android:visibility="gone" />

    <!-- Search Layout -->
    <LinearLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="16dp"
        android:background="@drawable/text_main_background"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_main_activity"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/search_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/endere_o"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_bus_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ponto_de_nibus"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RadioGroup>

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/search"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint=""
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_background"
            android:elevation="8dp"
            android:text="@string/text_search"
            android:textColor="@color/dark_blue"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/fab"
        android:text="@string/nibus_circulando"
        android:elevation="9dp"
        android:layout_marginEnd="16dp"
        android:textSize="8sp"
        android:padding="16dp"
        android:layout_marginBottom="160dp"
        android:background="@color/dark_blue"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="bottom|end"
        android:layout_width="100dp"
        android:layout_height="50dp">

    </Button>

    <FrameLayout
        android:id="@+id/options_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bottom_border_rounded"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bus_stop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bus_stop_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:padding="8dp"
                    android:gravity="center"
                    android:id="@+id/bus_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="37dp"
                        android:src="@drawable/icon_buss" />

                    <TextView
                        android:layout_marginStart="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next_buss"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:padding="8dp"
                    android:id="@+id/lines_route"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/icon_line_buss" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/lines_text_prox"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <!-- Bottom Sheet -->
    <FrameLayout
        android:id="@+id/bottomsheet"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:background="@drawable/top_rounded_board"
        android:paddingBottom="70dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingTop="15dp"
            tools:listitem="@layout/bus_object" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingTop="15dp"
            tools:listitem="@layout/bus_object" />

    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>